# mini_sdl

./: Cargo.toml  readme.md  todo.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
example_audio/: Cargo.toml
example_audio/src/: main.rs
example_basic/: Cargo.toml
example_basic/src/: main.rs
example_font/: Cargo.toml
example_font/src/: main.rs
example_font/src/classic-mono-narrow/: license.txt  readme.txt
example_gamepad/: Cargo.toml
example_gamepad/src/: main.rs
example_gamepad/src/classic-display/: readme.txt
example_overlay/: Cargo.toml
example_overlay/src/: main.rs
example_overlay/src/classic-display/: license.txt
src/: audio.rs  font_atlas.rs  gamepad.rs  lib.rs  scaling.rs  timing.rs
