[package]
name = "mini_sdl"
version = "0.2.9"
edition = "2021"
description = "A small and simple wrapper around SDL2"
license = "MIT"
repository = "https://github.com/DoctorWhoof/mini_sdl.git"
documentation = "https://docs.rs/mini_sdl/latest/mini_sdl/"

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["unsafe_textures"]

[features]
default = []
static-link = ["sdl2/static-link"]
ttf = ["sdl2/ttf"]

[workspace]
members = [
    "example_audio",
    "example_basic",
    "example_font",
    "example_gamepad",
    "example_overlay",
    "example_audio",
]
