[package]
name = "mini_sdl"
version = "0.4.0"
edition = "2021"
description = "A small and simple wrapper around SDL2"
license = "MIT"
repository = "https://github.com/DoctorWhoof/mini_sdl.git"
documentation = "https://docs.rs/mini_sdl/latest/mini_sdl/"

[dependencies]
# padstate = "0.2.4"
padstate = { path = "../padstate/" }
smooth-buffer = "0.3.1"

[dependencies.sdl3]
version = "0.14.21"
default-features = false
features = ["unsafe_textures"]

[features]
default = []
static-link = ["sdl3/static-link"]
ttf = ["sdl3/ttf"]

[workspace]
members = [
    "example_audio",
    "example_basic",
    "example_font",
    "example_gamepad",
    "example_overlay",
]
